// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Links block renders correctly 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal and with title and link 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="mb-4 bcl-heading"
    />
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with title 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="mb-4 bcl-heading"
    >
      Links block test title
    </h6>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h2
      class="mb-4 bcl-heading"
    >
      More information
    </h2>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background and with title and link 1`] = `
<jest>
  <div
    class="bg-light px-4 py-3 rounded-2 bcl-links-block"
  >
    <h6
      class="mb-4 bcl-heading"
    />
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4-5"
      >
        <a
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled"
      >
        <a
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly without links 1`] = `<jest />`;
